# university-management-system

./: .env_sample  .gitignore  .mailmap  .pre-commit-config.yaml  PRE-COMMIT.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: celery.py  settings.py  urls.py
course/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
course/migrations/: 0001_initial.py  0002_initial.py  0003_alter_studentsemester_semester_status.py  0003_remove_studentsemester_semester_count_and_more.py  0004_alter_studentsemester_semester_status.py  0004_remove_course_professors.py  0005_alter_studentsemester_gpa.py
course/test /: test_models.py  test_serializers.py  test_views.py
course/tests/: test_models.py  test_serializers.py  test_views.py
faculty/: admin.py  models.py  serializers.py  urls.py  views.py
faculty/migrations/: 0001_initial.py  0002_alter_academicfield_academic_level.py
faculty/tests/: test_models.py  test_views.py
user/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  validators.py  views.py
user/management/commands/: create_perm_groups.py
user/migrations/: 0001_initial.py  0002_alter_student_gpa.py
user/test/: test_models.py
user/tests/: test_admin.py  test_models.py  test_serializers.py  test_signals.py  test_views.py
utils/: auth.py  misc.py
utils/models/: choices.py
